# bacteria-core

./: .travis.yml  CMakeLists.txt  README.md  TODO.md
integration_tests/: YamlConvert.hpp  YamlEmitter.cpp  YamlEmitter.hpp  YamlReader.cpp  YamlReader.hpp  check_yaml.py  main.cpp  run_tests.sh
integration_tests/tests/: clon.expected.yaml  clon.yaml  clon0.bact  clon_and_death.expected.yaml  clon_and_death.yaml  clon_and_death0.bact  clon_to_bact.expected.yaml  clon_to_bact.yaml  eat.expected.yaml  eat.yaml  failed_action.expected.yaml  failed_action.yaml  go.expected.yaml  go.yaml  je_false.expected.yaml  je_false.yaml  je_true.expected.yaml  je_true.yaml  je_true0.bact  jg.expected.yaml  jg.yaml  jg0.bact  jl_and_eat_n.expected.yaml  jl_and_eat_n.yaml  jl_and_eat_n0.bact  left.expected.yaml  left.yaml  left0.bact  no_clon_and_death.expected.yaml  no_clon_and_death.yaml  pseudo_actions_excess.expected.yaml  pseudo_actions_excess.yaml  right.expected.yaml  right0.bact  selective_str.expected.yaml  selective_str.yaml  str.expected.yaml  turn.expected.yaml  turn0.bact
src/: CoreConstants.hpp  CoreGlobals.hpp  Creator.cpp  Creator.hpp  constants.hpp
src/interpreter/: Bytecode.cpp  Bytecode.hpp  Interpreter.cpp  Interpreter.hpp  State.hpp
src/model/: Changer.cpp  Changer.hpp  Model.cpp  Model.hpp
src/test/: CMakeLists.txt  model.cpp  test.cpp
src/util/: Exception.cpp  random.cpp  random.hpp
test/: CMakeLists.txt  exception.cpp  model.cpp
unit_tests/: TestFunctions.cpp  TestFunctions.hpp  bytecode.cpp  changer.cpp  creator.cpp  interpreter.cpp  model.cpp
